--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.4", features = ["runtime-actix-rustls", "sqlite", "macros", "offline"]}
+sqlx = { version = "0.4", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}
 actix-web = "3"
 actix-rt = "1"
 anyhow = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15"
+rand = "0.8"
+chrono = { version = "0.4", features = ["serde"] }
